commander/src/main/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: commander
  name: commander
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: commander
  strategy: {}
  template:
    metadata:
      labels:
        deployment: commander
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
    spec:
      containers:
      - image: commander
        name: commander
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
