commander/src/main/k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: commander
  name: commander
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: commander
    weight: 100
  wildcardPolicy: None
